loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: global-loadbalancer
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-name: "global-lb"
spec:
  type: LoadBalancer
  loadBalancerIP: 165.227.253.14  # 🛑 Usa la IP Reservada
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
