service.yaml
apiVersion: v1
kind: Service
metadata:
  name: djhomeremodelersinc-seo-service
spec:
  type: LoadBalancer
  selector:
    app: djhomeremodelersinc-seo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4321
