sevetechconstruction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sevetechconstruction-service
spec:
  type: LoadBalancer
  selector:
    app: sevetechconstruction
  ports:
    - protocol: TCP
      port: 80          # Puerto que expone el servicio externamente
      targetPort: 4321  # Puerto donde la app realmente escucha dentro del contenedor
