traefik-install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-system

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik-system
spec:
  type: LoadBalancer
  loadBalancerIP: 167.172.15.227
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v2.9
          args:
            - "--api.insecure=true"
            - "--providers.kubernetesingress=true"
            - "--entrypoints.web.address=:80"
            - "--entrypoints.websecure.address=:443"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
