ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aklandscaping-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: aklandscapingmaintenanceinc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: djhomeremodelersinc-seo-service
                port:
                  number: 80
