sevetechconstruction-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sevetechconstruction-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik  # Asegura que Traefik maneje este Ingress
  rules:
    - host: aklandscapingmaintenanceinc.com  # Dominio que apuntará al servicio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sevetechconstruction-service  # Asegúrate de que el nombre del servicio es correcto
                port:
                  number: 4321  # Confirma que el servicio expone este puerto
